--- a/src/sass/addons/_images.scss
+++ b/src/sass/addons/_images.scss
@@ -3,13 +3,19 @@
 }
 
 .medium-editor-insert-images.align-left {
-    max-width: 50%;
-    float: left;
+    img {
+        max-width: 50%;
+        float: left;
+        margin-right: 20px;
+    }
 }
 
 .medium-editor-insert-images.align-right {
-    max-width: 50%;
-    float: right;
+    img {
+        max-width: 50%;
+        float: right;
+        margin-left: 20px;
+    }
 }
 
 .medium-editor-insert-images.align-center {
