--- a/src/sass/addons/_images.scss
+++ b/src/sass/addons/_images.scss
@@ -2,6 +2,14 @@
     outline: 2px solid #000;
 }
 
+.medium-editor-insert-images {
+    &:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+}
+
 .medium-editor-insert-images.align-left {
     img {
         max-width: 50%;
