--- a/src/sass/addons/_images.scss
+++ b/src/sass/addons/_images.scss
@@ -3,6 +3,7 @@
 }
 
 .medium-editor-insert-images {
+    position: relative;
     &:after {
         content: "";
         display: table;
@@ -44,11 +45,13 @@
     display: inline-block;
     border: 1px dashed rgba(0, 0, 0, .2);
     vertical-align: top;
-    min-height: 25px;
+    font-size: 14px;
+    min-height: 30px;
     width: 100%;
     text-align: center;
     font-style: italic;
     position: relative;
+    margin-top: -4px;
 }
 
 .medium-editor-embed-image-description:empty {
@@ -57,4 +60,17 @@
 
 .medium-editor-insert-image-active ~ .medium-editor-embed-image-description {
     display: inline-block;
+}
+
+.medium-editor-insert-image-active ~ .medium-editor-embed-image-description:empty + span:after {
+    content: attr(data-placeholder);
+    position: absolute;
+    left: 0;
+    bottom: 30px;
+    font-size: 14px;
+    text-align: center;
+    right: 0;
+    height: 25px;
+    opacity: .5;
+    pointer-events: none;
 }
