Working with medium editor

--- a/src/sass/_core.scss
+++ b/src/sass/_core.scss
@@ -96,3 +96,11 @@
 .medium-editor-insert-buttons-active {
 	display: block;
 }
+
+.medium-editor-element {
+    &:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+}
