--- a/src/sass/addons/_images.scss
+++ b/src/sass/addons/_images.scss
@@ -14,6 +14,11 @@
     }
 }
 
+.medium-editor-insert-images.align-center {
+    display: block;
+    text-align: center;
+}
+
 .medium-editor-insert-images.align-left {
     float: left;
     width: 50%;
@@ -24,9 +29,10 @@
     width: 50%;
 }
 
-.medium-editor-insert-images.align-center {
+.medium-editor-insert-images.align-center-full {
     display: block;
-    text-align: center;
+    margin-left: -25%;
+    margin-right: -25%;
 }
 
 .medium-editor-insert-image-active ~ .medium-editor-embed-image-description {
