--- a/src/sass/addons/_images.scss
+++ b/src/sass/addons/_images.scss
@@ -4,13 +4,15 @@
 
 .medium-editor-insert-images {
     position: relative;
-}
 
-.medium-editor-insert-images {
     &:after {
         content: "";
         display: table;
         clear: both;
+    }
+
+    img {
+        max-width: 100%;
     }
 }
 
