--- a/src/sass/addons/_images.scss
+++ b/src/sass/addons/_images.scss
@@ -4,13 +4,15 @@
 
 .medium-editor-insert-images {
     position: relative;
-}
 
-.medium-editor-insert-images {
     &:after {
         content: "";
         display: table;
         clear: both;
+    }
+
+    img {
+        max-width: 100%;
     }
 }
 
@@ -33,6 +35,10 @@
     display: block;
     margin-left: -25%;
     margin-right: -25%;
+
+    img {
+        width: 100%;
+    }
 }
 
 .medium-editor-insert-image-active ~ .medium-editor-embed-image-description {
