Change class for align chapters

--- a/examples/css/demo.css
+++ b/examples/css/demo.css
@@ -118,7 +118,7 @@ blockquote {
     margin: 64px 0;
 }
 
-.medium-editor-insert-embed-chapters.vertical {
+.medium-editor-insert-embed-chapters.align-left {
     margin-left: 190px;
     padding-right: 80px;
 }
