--- a/src/sass/addons/_chapters.scss
+++ b/src/sass/addons/_chapters.scss
@@ -1,15 +1,15 @@
 .medium-editor-insert-embed-chapters-active {
-    &:not(.vertical) {
+    &:not(.align-left) {
         outline: 2px solid #000;
     }
 
-    &.vertical > div {
+    &.align-left > div {
         outline: 2px solid #000;
     }
 }
 
 .medium-editor-insert-embed-chapters {
-  &.vertical {
+  &.align-left {
     float: left;
   }
 }
