--- a/src/sass/addons/_paywall.scss
+++ b/src/sass/addons/_paywall.scss
@@ -1,8 +1,10 @@
 .medium-editor-insert-embed-paywall {
-    display: block;
-    height: 2px;
-    background: rgba(0, 0, 0, .3);
-    margin: 50px 0px 60px 0px;
+    padding-bottom: 20px;
+
+    > div {
+        height: 2px;
+        background: rgba(0, 0, 0, .3);
+    }
 }
 
 .medium-editor-insert-embed-paywall ~ p, .medium-editor-insert-embed-paywall ~ div {
