--- a/src/sass/medium-editor-insert.scss
+++ b/src/sass/medium-editor-insert.scss
@@ -1,5 +1,5 @@
 @import "core";
 @import "addons/images";
 @import "addons/embeds";
-@import "addons/chapters";
+@import "addons/html";
 @import "addons/paywall";
